# Retrieval-VM-bench

./: .gitignore  README.md  pyproject.toml
prompts/: judge_prompt.md  retrieval_task.md
src/: evaluator.py  prepare_ms_marco_data.py  run_llm_loop.py
workspace/: baseline.py  solution.py
